kubernetes/argocd-personal/applications/site-blahaj-sh/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-blahaj-sh
  namespace: site-blahaj-sh
spec:
  selector:
    app.kubernetes.io/name: site-blahaj-sh
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
